--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+body {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 .main-container {
     max-width: 680px;
     margin: 0 auto;
@@ -16,14 +20,17 @@
 
 .header,
 .footer {
-    background-color: #362f36db;
-    height: 100px;
+    background-color: #efefefdb;
+}
+
+.footer {
+    padding: 1rem;
 }
 
 h1 {
     text-align: center;
-    padding-top: 30px;
-    color: #FFC107;
+    color: #737066;
+    padding: 14px 0;
 }
 
 .info-wrapper {
@@ -38,22 +45,42 @@ li {
 }
 
 .game-info-sec {
-    background-color: rgba(0, 0, 0, 0.404);
+    background-color: rgb(241 241 241);
+    width: 30%;
 }
 
 .dice-contain-sec {
-    background-color: rgb(255 193 7 / 77%);
+    background-color: rgb(249 249 248);
+    width: 40%;
 }
 
+.base-control {
+    display: flex;
+    justify-content: center;
+}
+
+.player-container  {
+    text-align: center;
+    padding: 1rem;
+}
 .wrapper {
-    width: 33.3%;
     height: 325px;
-    border-radius: 37px;
     margin-right: 4px;
 }
 
 .game-play-score-status-sec {
-    background-color: rgba(54, 211, 6, 0.295);
+    background-color: rgb(239 239 239);
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.score-wrapper {
+    background: #dede35;
+    padding: 14px;
+    text-align: center;
+    font-size: 50px;
 }
 
 .img-dice {
@@ -68,12 +95,11 @@ li {
 }
 
 .status-wrapper {
-    height: 100px;
-    background: #adad05;
-    width: 86%;
-    margin: 0 auto;
     margin-top: 1em;
-    border-radius: 15px;
+}
+
+.status-wrapper span {
+
 }
 
 h2 {
@@ -85,17 +111,19 @@ h2 {
 
 .btn-wrapper {
     padding: 4px;
+    display: flex;
+    justify-content: center;
 }
 
 .btn {
-    width: 98%;
-    padding: 9px;
+    padding: 11px 20px;
     margin-top: 27px;
     background: #239223cc;
     border: none;
     color: white;
     cursor: pointer;
-    border-radius: 8px;
+    border-radius: 5px;
+    font-size: 16px;
 }
 
 .btn:hover {
@@ -104,8 +132,9 @@ h2 {
 
 #winStatus {
     text-align: center;
-    color: #fffdf9;
+    color: #65635e;
     margin-top: 10px;
+    font-size: 15px;
 }
 
 
